# so_projekt_basen

./: .gitignore  CMakeLists.txt  Makefile  PALIWODA_RAFAŁ_147878_opis_basen.md  README.md  tests.md
src/: main.cpp
src/cashier/: cashier.cpp  cashier.h
src/client/: client.cpp  client.h
src/common/: shared_memory.h  signal_handler.cpp  signal_handler.h
src/error_handler/: error_handler.cpp  error_handler.h
src/lifeguard/: lifeguard.cpp  lifeguard.h
src/maintenance_manager/: maintenance_manager.cpp  maintenance_manager.h
src/monitor/: monitor.cpp  monitor.h
src/pool/: pool.cpp  pool.h
src/pool_manager/: pool_manager.cpp  pool_manager.h
src/ticket/: ticket.cpp  ticket.h
src/ui_manager/: ui_manager.cpp  ui_manager.h
src/working_hours_manager/: working_hours_manager.cpp  working_hours_manager.h
